added navbar again

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header>
         <!-- navbar --> 
 
-        <div class="navbar px-28 bg-base-100">
+        <div class="navbar lg:px-28 bg-base-100">
             <div class="navbar-start">
               <div class="dropdown">
                 <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -59,7 +59,9 @@
               </ul>
             </div>
             <div class="navbar-end lg:space-x-3">
-                <i class="hidden lg:fa-solid fa-magnifying-glass w-6 h-6 text-[#89898B] lg:flex items-center"></i>
+              <div class="hidden lg:flex">
+                <i class="fa-solid block fa-magnifying-glass w-6 h-6 text-[#89898B] lg:flex items-center"></i>
+              </div>
               <a class="btn bg-[#FF4240] text-white">Get Ticket</a>
             </div>
           </div>
