added progress section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   <li class="hover:text-[#FF4240] text-[16px] font-normal"><a>Contact</a></li>
               </ul>
             </div>
-            <div class="navbar-end lg:space-x-3">
+            <div class="navbar-end pr-3 lg:space-x-3">
               <div class="hidden lg:flex">
                 <i class="fa-solid block fa-magnifying-glass w-6 h-6 text-[#89898B] lg:flex items-center"></i>
               </div>
@@ -66,8 +66,8 @@
             </div>
           </div>
 
-          <!-- added header with slider -->
-          <section class="lg:pl-28 lg:pr-28 pt-12 pb-12 ">
+          <!--header with slider -->
+          <section class="pl-5 pr-5 pb-5 lg:pl-28 lg:pr-28 pt-12 lg:pb-12 ">
             <div class="carousel rounded-2xl lg:h-[570px] ">
                 <div id="slide1" class="carousel-item relative w-full">
                   <img src="Images/1.png" class="w-full" />
@@ -99,9 +99,42 @@
                 </div>
               </div>
           </section>
-
     </header>
     <main>
+
+    <!-- Professional Hockeys Club and progress -->
+        <section class="pl-5 pr-5 pb-5  lg:pt-10 lg:pb-12 lg:px-28">
+            <div class="text-center ">
+                <h1 class="font-extrabold text-4xl">Professional Hockeys Club</h1>
+                <p class="pt-3 text-[#131318]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+            </div>
+
+            <div class="flex-col lg:pl-28 lg:pr-28 pt-12 lg:pb-12 ">
+                <div class="space-y-10 lg:flex justify-around items-center text-center">
+                    <div class=" lg:space-y-4">
+                        <div class="radial-progress text-red-400 " style="--value:75;" role="progressbar"><span class="text-black">87%</span></div>
+                        <h3 class="text-xl font-semibold">Prayer Facility</h3>
+                        <p class="font-medium text-base">Amet consectetur. Condimentum <br> dignissim adipiscing.</p>
+                    </div>
+                   <div class=" lg:space-y-4">
+                        <div class="radial-progress text-[#49D293]" style="--value:80;" role="progressbar"><span class="text-black">95%</span></div>
+                        <h3 class="text-xl font-semibold">Experienced Coach</h3>
+                        <p>Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+                   </div>
+                    <div class="lg:space-y-4">
+                        <div class="radial-progress text-[#FFB456]" style="--value:77;" role="progressbar"><span class="text-black">90%</span></div>
+                        <h3 class="text-xl font-semibold">Senior Player</h3>
+                        <p>Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+                    </div>
+                    <div class="lg:space-y-4">
+                        <div class="radial-progress text-[#4C8DF1]" style="--value:72;" role="progressbar"><span class="text-black">80%</span></div>
+                        <h3 class="text-xl font-semibold">Training Ground</h3>
+                        <p>Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
     </main>
     <footer>
