--- a/index.html
+++ b/index.html
@@ -111,21 +111,25 @@
 
             <div class="flex-col lg:pl-28 lg:pr-28 pt-12 lg:pb-12 ">
                 <div class="space-y-10 lg:flex justify-around items-center text-center">
-                    <div class=" lg:space-y-4">
+
+                    <div class=" lg:space-y-4 lg:pt-10">
                         <div class="radial-progress text-red-400 " style="--value:75;" role="progressbar"><span class="text-black">87%</span></div>
-                        <h3 class="text-xl font-semibold">Prayer Facility</h3>
-                        <p class="font-medium text-base">Amet consectetur. Condimentum <br> dignissim adipiscing.</p>
-                    </div>
+                        <h3 class="text-xl font-semibold">Experienced Coach</h3>
+                        <p>Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+                    </div> 
+
                    <div class=" lg:space-y-4">
                         <div class="radial-progress text-[#49D293]" style="--value:80;" role="progressbar"><span class="text-black">95%</span></div>
                         <h3 class="text-xl font-semibold">Experienced Coach</h3>
                         <p>Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
                    </div>
+
                     <div class="lg:space-y-4">
                         <div class="radial-progress text-[#FFB456]" style="--value:77;" role="progressbar"><span class="text-black">90%</span></div>
                         <h3 class="text-xl font-semibold">Senior Player</h3>
                         <p>Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
                     </div>
+
                     <div class="lg:space-y-4">
                         <div class="radial-progress text-[#4C8DF1]" style="--value:72;" role="progressbar"><span class="text-black">80%</span></div>
                         <h3 class="text-xl font-semibold">Training Ground</h3>
