--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
 
     <!-- Professional Hockeys Club and progress -->
         <section class="pl-5 pr-5 pb-5  lg:pt-10 lg:pb-12 lg:px-28">
-            <div class="text-center ">
+            <div class="text-center">
                 <h1 class="font-extrabold text-4xl">Professional Hockeys Club</h1>
                 <p class="pt-3 text-[#131318]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
             </div>
 
-            <div class="flex-col lg:pl-28 lg:pr-28 pt-12 lg:pb-12 ">
+            <div class="flex-col lg:pl-28 lg:pr-28 pt-12 lg:pb-12">
                 <div class="space-y-10 lg:flex justify-around items-center text-center">
 
                     <div class=" lg:space-y-4 lg:pt-10">
@@ -139,6 +139,47 @@
             </div>
 
         </section>
+        <!-- program section -->
+    <section  class="pl-5 pr-5 pb-5  lg:pt-10 lg:pb-12 lg:px-28">
+        <div class="text-center">
+            <h1 class="font-extrabold text-4xl">Program Sections</h1>
+            <p class="pt-3 text-[#131318]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+        </div>
+        <div class="gap-5 lg:grid grid-cols-2 mt-12">
+            <div class="card bg-base-100 shadow-xl image-full mb-5">
+                <figure><img class="" src="Images/2.png" alt="" /></figure>
+                <div class=" z-20  lg:z-20 p-8 flex flex-col justify-end">
+                 <h2 class="text-[28px] font-extrabold text-white lg:mb-8">Junior Program</h2>
+                  <p class="text-base font-medium text-white mb-4 lg:mb-8 ">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                    enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                    <button class="btn bg-[#FF4240] border-none text-white w-[180px] lg:w-[180px]">Register Now!</button>
+                </div>
+            </div>
+            <div class="card bg-base-100 shadow-xl image-full mb-5">
+                <figure><img class="" src="Images/3.png" alt="" /></figure>
+                <div class=" z-20  lg:z-20 p-8 flex flex-col justify-end">
+                 <h2 class="text-[28px] font-extrabold text-white lg:mb-8">Teenager Program</h2>
+                  <p class="text-base font-medium text-white mb-4 lg:mb-8">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                    enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                  <div class="card-actions">
+                    <button class="btn bg-[#FF4240] border-none text-white w-[180px] lg:w-[180px]">Register Now!</button>
+                  </div>
+                </div>
+            </div>
+            <div class="card bg-base-100 shadow-xl image-full col-span-2 mb-5 lg:-mt-5"> 
+                <figure><img class="" src="Images/4.png" alt="" /></figure>
+                <div class=" z-20  lg:z-20 p-8 flex flex-col justify-end">
+                 <h2 class="text-[28px] font-extrabold text-white lg:mb-8">Junior Program</h2>
+                  <p class="text-base font-medium text-white mb-4 lg:mb-8">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                    enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                  <div class="card-actions">
+                    <button class="btn bg-[#FF4240] border-none text-white w-[180px] lg:w-[180px]">Register Now!</button>
+                  </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
 
     </main>
     <footer>
