added prograss and text

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   <li><a>Contact</a></li>
                 </ul>
               </div>
-              <a class="btn btn-ghost font-extrabold text-4xl">Hockey’s</a>
+              <a class=" font-extrabold text-4xl">Hockey<span class="text-red-500">’</span>s</a>
             </div>
             <div class="navbar-center hidden lg:flex">
               <ul class="menu menu-horizontal px-1">
@@ -113,25 +113,25 @@
                 <div class="space-y-10 lg:flex justify-around items-center text-center">
 
                     <div class=" lg:space-y-4 lg:pt-10">
-                        <div class="radial-progress text-red-400 " style="--value:75;" role="progressbar"><span class="text-black">87%</span></div>
+                        <div class="radial-progress rotate-[160deg] text-red-400 " style="--value:80;" role="progressbar"><span class="text-black rotate-[-160deg]">87%</span></div>
                         <h3 class="text-xl font-semibold">Experienced Coach</h3>
                         <p>Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
                     </div> 
 
                    <div class=" lg:space-y-4">
-                        <div class="radial-progress text-[#49D293]" style="--value:80;" role="progressbar"><span class="text-black">95%</span></div>
+                        <div class="radial-progress rotate-[130deg] text-[#49D293]" style="--value:90;" role="progressbar"><span class="text-black rotate-[-130deg]">95%</span></div>
                         <h3 class="text-xl font-semibold">Experienced Coach</h3>
                         <p>Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
                    </div>
 
                     <div class="lg:space-y-4">
-                        <div class="radial-progress text-[#FFB456]" style="--value:77;" role="progressbar"><span class="text-black">90%</span></div>
+                        <div class="radial-progress rotate-[160deg] text-[#FFB456]" style="--value:85;" role="progressbar"><span class="text-black rotate-[-160deg]">90%</span></div>
                         <h3 class="text-xl font-semibold">Senior Player</h3>
                         <p>Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
                     </div>
 
                     <div class="lg:space-y-4">
-                        <div class="radial-progress text-[#4C8DF1]" style="--value:72;" role="progressbar"><span class="text-black">80%</span></div>
+                        <div class="radial-progress rotate-[160deg] text-[#4C8DF1]" style="--value:80;" role="progressbar"><span class="text-black rotate-[-160deg]">80%</span></div>
                         <h3 class="text-xl font-semibold">Training Ground</h3>
                         <p>Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
                     </div>
