--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="flex-col lg:pl-28 lg:pr-28 pt-12 lg:pb-12">
                 <div class="space-y-10 lg:flex justify-around items-center text-center">
 
-                    <div class=" lg:space-y-4 lg:pt-10">
+                    <div class=" lg:lg:pt-10">
                         <div class="radial-progress rotate-[160deg] text-red-400 " style="--value:80;" role="progressbar"><span class="text-black rotate-[-160deg]">87%</span></div>
                         <h3 class="text-xl font-semibold">Experienced Coach</h3>
                         <p>Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
@@ -177,9 +177,227 @@
                   </div>
                 </div>
             </div>
-
         </div>
     </section>
+    <!-- new products section -->
+<section class="pl-5 pr-5 pb-5  lg:pt-10 lg:pb-12 lg:px-28">
+            <div class="text-center pb-3 lg:pb-14">
+                <h1 class="font-extrabold text-4xl">Professional Hockeys Club</h1>
+                 <p class="pt-3 text-[#131318]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+             </div>
+     <div class="grid lg:grid-cols-2 gap-4">
+        <!-- 1st card -->
+        <div class="hero  bg-zinc-100 rounded-2xl ">
+            <div class="hero-content flex-col lg:flex-row ">
+              <img src="Images/5.png" class="max-w-sm rounded-lg " />
+              <div>
+                <div class="flex gap-5">
+                    <div class="flex gap-3">
+                        <img src="Images/Frame.png" alt="">
+                        <p>5.0</p>
+                    </div>
+                    <div class="flex gap-3">
+                        <img src="Images/Frame (1).png" alt="">
+                        <p>20</p>
+                    </div>
+                    <div class="flex gap-3">
+                        <img src="Images/Frame (2).png" alt="">
+                        <p>200</p>
+                    </div>
+                </div>
+                <h1 class="text-xl font-extrabold">World Cup Flags Football</h1>
+                <p class="py-6">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+                <div>
+                    <div class="lg:flex gap-7">
+                        <p><span class="font-extrabold text-[18px]">Price - $22.00</span></p>
+                        <div class="flex gap-3">
+                            <div><img src="Images/Frame 4.png" alt=""></div>
+                            <div>
+                            <p>Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </div>
+        <!-- 2nd card -->
+        <div class="hero  bg-zinc-100 rounded-2xl ">
+            <div class="hero-content flex-col lg:flex-row ">
+              <img src="Images/6.png" class="max-w-sm rounded-lg " />
+              <div>
+                <div class="flex gap-5">
+                    <div class="flex gap-3">
+                        <img src="Images/Frame.png" alt="">
+                        <p>5.0</p>
+                    </div>
+                    <div class="flex gap-3">
+                        <img src="Images/Frame (1).png" alt="">
+                        <p>20</p>
+                    </div>
+                    <div class="flex gap-3">
+                        <img src="Images/Frame (2).png" alt="">
+                        <p>200</p>
+                    </div>
+                </div>
+                <h1 class="text-xl font-extrabold">World Cup Flags Football</h1>
+                <p class="py-6">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+                <div>
+                    <div class="lg:flex gap-7">
+                        <p><span class="font-extrabold text-[18px]">Price - $22.00</span></p>
+                        <div class="flex gap-3">
+                            <div><img src="Images/Frame 4.png" alt=""></div>
+                            <div>
+                            <p>Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </div>
+        <!-- 3rd card -->
+        <div class="hero  bg-zinc-100 rounded-2xl ">
+            <div class="hero-content flex-col lg:flex-row ">
+              <img src="Images/7.png" class="max-w-sm rounded-lg " />
+              <div>
+                <div class="flex gap-5">
+                    <div class="flex gap-3">
+                        <img src="Images/Frame.png" alt="">
+                        <p>5.0</p>
+                    </div>
+                    <div class="flex gap-3">
+                        <img src="Images/Frame (1).png" alt="">
+                        <p>20</p>
+                    </div>
+                    <div class="flex gap-3">
+                        <img src="Images/Frame (2).png" alt="">
+                        <p>200</p>
+                    </div>
+                </div>
+                <h1 class="text-xl font-extrabold">World Cup Flags Football</h1>
+                <p class="py-6">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+                <div>
+                    <div class="lg:flex gap-7">
+                        <p><span class="font-extrabold text-[18px]">Price - $22.00</span></p>
+                        <div class="flex gap-3">
+                            <div><img src="Images/Frame 4.png" alt=""></div>
+                            <div>
+                            <p>Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </div>
+        <!-- 4th card -->
+        <div class="hero  bg-zinc-100 rounded-2xl ">
+            <div class="hero-content flex-col lg:flex-row ">
+              <img src="Images/8.png" class="max-w-sm rounded-lg " />
+              <div>
+                <div class="flex gap-5">
+                    <div class="flex gap-3">
+                        <img src="Images/Frame.png" alt="">
+                        <p>5.0</p>
+                    </div>
+                    <div class="flex gap-3">
+                        <img src="Images/Frame (1).png" alt="">
+                        <p>20</p>
+                    </div>
+                    <div class="flex gap-3">
+                        <img src="Images/Frame (2).png" alt="">
+                        <p>200</p>
+                    </div>
+                </div>
+                <h1 class="text-xl font-extrabold">World Cup Flags Football</h1>
+                <p class="py-6">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+                <div>
+                    <div class="lg:flex gap-7">
+                        <p><span class="font-extrabold text-[18px]">Price - $22.00</span></p>
+                        <div class="flex gap-3">
+                            <div><img src="Images/Frame 4.png" alt=""></div>
+                            <div>
+                            <p>Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </div>
+        <!-- 5th card -->
+        <div class="hero  bg-zinc-100 rounded-2xl ">
+            <div class="hero-content flex-col lg:flex-row ">
+              <img src="Images/9.png" class="max-w-sm rounded-lg " />
+              <div>
+                <div class="flex gap-5">
+                    <div class="flex gap-3">
+                        <img src="Images/Frame.png" alt="">
+                        <p>5.0</p>
+                    </div>
+                    <div class="flex gap-3">
+                        <img src="Images/Frame (1).png" alt="">
+                        <p>20</p>
+                    </div>
+                    <div class="flex gap-3">
+                        <img src="Images/Frame (2).png" alt="">
+                        <p>200</p>
+                    </div>
+                </div>
+                <h1 class="text-xl font-extrabold">World Cup Flags Football</h1>
+                <p class="py-6">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+                <div>
+                    <div class="lg:flex gap-7">
+                        <p><span class="font-extrabold text-[18px]">Price - $22.00</span></p>
+                        <div class="flex gap-3">
+                            <div><img src="Images/Frame 4.png" alt=""></div>
+                            <div>
+                            <p>Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </div>
+        <!-- 6th card -->
+        <div class="hero  bg-zinc-100 rounded-2xl ">
+            <div class="hero-content flex-col lg:flex-row ">
+              <img src="Images/6.png" class="max-w-sm rounded-lg " />
+              <div>
+                <div class="flex gap-5">
+                    <div class="flex gap-3">
+                        <img src="Images/Frame.png" alt="">
+                        <p>5.0</p>
+                    </div>
+                    <div class="flex gap-3">
+                        <img src="Images/Frame (1).png" alt="">
+                        <p>20</p>
+                    </div>
+                    <div class="flex gap-3">
+                        <img src="Images/Frame (2).png" alt="">
+                        <p>200</p>
+                    </div>
+                </div>
+                <h1 class="text-xl font-extrabold">World Cup Flags Football</h1>
+                <p class="py-6">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+                <div>
+                    <div class="lg:flex gap-7">
+                        <p><span class="font-extrabold text-[18px]">Price - $22.00</span></p>
+                        <div class="flex gap-3">
+                            <div><img src="Images/Frame 4.png" alt=""></div>
+                            <div>
+                            <p>Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>
+ </section>
 
     </main>
     <footer>
