added clients question

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <!-- new products section -->
 <section class="pl-5 pr-5 pb-5  lg:pt-10 lg:pb-12 lg:px-28">
             <div class="text-center pb-3 lg:pb-14">
-                <h1 class="font-extrabold text-4xl">Professional Hockeys Club</h1>
+                <h1 class="font-extrabold text-4xl">Our New Products</h1>
                  <p class="pt-3 text-[#131318]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
              </div>
      <div class="grid lg:grid-cols-2 gap-4">
@@ -398,7 +398,74 @@
         </div>
     </div>
  </section>
-
+<!-- clients question -->
+<section class="pl-5 pr-5 pb-5 mt-5 lg:pt-10 lg:pb-10 lg:px-28" >
+    <div class="text-center pb-3 lg:pb-14">
+        <h1 class="font-extrabold text-4xl">Clients Question</h1>
+         <p class="pt-3 text-[#131318]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+    </div>
+  <div class="lg:flex items-center gap-5   ">
+      <div class="mb-6">
+        <img class="lg:h-[540px] lg:mt-6" src="Images/11.png" alt="">
+      </div>
+        <div class=" lg:flex flex-col lg:w-[60%] ">
+            <div class="collapse collapse-plus bg-base-200 lg:pt-3 pb-3">
+                <input type="radio" name="my-accordion-3"checked="checked" /> 
+                <div class="collapse-title text-xl font-medium">
+                    Our Equipment
+                </div>
+                <div class="collapse-content"> 
+                  <p>hello</p>
+                </div>
+              </div>
+              <div class="collapse collapse-plus bg-base-200 lg:pt-3 pb-3">
+                <input type="radio" name="my-accordion-3" /> 
+                <div class=" collapse-title text-xl font-medium">
+                    Hockey Training
+                </div>
+                <div class="collapse-content"> 
+                  <p>hello</p>
+                </div>
+              </div>
+              <div class="collapse collapse-plus bg-base-200 lg:pt-3 pb-3">
+                <input type="radio" name="my-accordion-3" /> 
+                <div class="collapse-title text-xl font-medium">
+                    Private Lessons
+                </div>
+                <div class="collapse-content"> 
+                  <p>hello</p>
+                </div>
+              </div>
+              <div class="collapse collapse-plus bg-base-200 lg:pt-3 pb-3">
+                <input type="radio" name="my-accordion-3" /> 
+                <div class="collapse-title text-xl font-medium">
+                    Ski Touring
+                </div>
+                <div class="collapse-content"> 
+                  <p>hello</p>
+                </div>
+              </div>
+              <div class="collapse collapse-plus bg-base-200 lg:pt-3 pb-3">
+                <input type="radio" name="my-accordion-3" /> 
+                <div class="collapse-title text-xl font-medium">
+                    Booking
+                </div>
+                <div class="collapse-content"> 
+                  <p>hello</p>
+                </div>
+              </div>
+              <div class="collapse collapse-plus bg-base-200 lg:pt-3 pb-3">
+                <input type="radio" name="my-accordion-3" /> 
+                <div class="collapse-title text-xl font-medium">
+                    Pricing
+                </div>
+                <div class="collapse-content"> 
+                  <p>hello</p>
+                </div>
+              </div>
+        </div>
+  </div>
+</section>
     </main>
     <footer>
 
