--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
         <h1 class="font-extrabold text-4xl">Clients Question</h1>
          <p class="pt-3 text-[#131318]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
     </div>
-  <div class="lg:flex items-center gap-5   ">
+  <div class="md:flex space-x-10 lg:flex items-center gap-5   ">
       <div class="mb-6">
         <img class="lg:h-[540px] lg:mt-6" src="Images/11.png" alt="">
       </div>
@@ -473,7 +473,7 @@
             <p class="pt-3 text-[#131318]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
         </div>
         <!-- start -->
-        <div class="lg:flex lg:gap-14 ">
+        <div class="lg:flex lg:gap-[114px] ">
             <div class="space-y-5">
                 <div class="bg-[#F8FDF0] p-10 lg:w-[370px] rounded-2xl">
                      <img class="mb-4" src="Images/Group 1171275317.png" alt="">
@@ -495,20 +495,20 @@
              <!-- input -->
              <div class=" ">
                
-                 <div class="lg:flex gap-8">
-                    <div >
+                 <div class="lg:flex lg:gap-[54px]">
+                    <div>
                         <label class="form-control w-full">
                             <div class="label">
                               <span class="label-text"> Your name</span>
                             </div>
-                            <input type="text" placeholder="Type here" class="input input-bordered w-full " />
+                            <input type="text" placeholder="Type here" class="lg:pl-[80px] input input-bordered w-full " />
                         </label>
 
-                         <label class="form-control w-full ">
+                         <label class="form-control w-full  ">
                             <div class="label">
                               <span class="label-text">Subject</span>
                             </div>
-                            <input type="text" placeholder="Type here" class="input input-bordered w-full " />
+                            <input type="text" placeholder="Type here" class="lg:pl-[80px] input input-bordered w-full " />
                           </label>
                     </div>
                    
@@ -518,20 +518,20 @@
                             <div class="label">
                               <span class="label-text">Your Email</span>
                             </div>
-                            <input type="text" placeholder="Type here" class="input input-bordered w-full " />
+                            <input type="text" placeholder="Type here" class="lg:pl-[80px] input input-bordered w-full " />
                           </label>
                          <label class="form-control w-full ">
                             <div class="label">
                               <span class="label-text">Phone Number</span>
                             </div>
-                            <input type="text" placeholder="Type here" class="input input-bordered w-full " />
+                            <input type="text" placeholder="Type here" class="lg:pl-[80px] input input-bordered w-full " />
                           </label>
                     </div>
                  </div>
-                 <span>Message</span>
-                  <textarea placeholder="" class="textarea textarea-bordered textarea-lg h-[200px] w-[370px] lg:w-[670px] lg:h-[370px]" ></textarea>
-                  <div class="bg-red-600 lg:w-[670px] p-[15px] text-center rounded-2xl">
-                    <span class="text-white">Send Message</span>
+                 <span class="md:hidden lg:flex">Message</span>
+                  <textarea placeholder="" class="textarea textarea-bordered textarea-lg h-[200px] w-[370px] md:w-[870px] lg:w-[610px] lg:h-[370px]" ></textarea>
+                  <div class="bg-[#FF4240] lg:w-[610px] p-[15px] text-center rounded-2xl">
+                    <span class= " text-white">Send Message</span>
                   </div>
                </div>
         </div>
