--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
         <h1 class="font-extrabold text-4xl">Clients Question</h1>
          <p class="pt-3 text-[#131318]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
     </div>
-  <div class="md:flex space-x-10 lg:flex items-center gap-5   ">
+  <div class="md:flex md:space-x-10 lg:flex items-center gap-5   ">
       <div class="mb-6">
         <img class="lg:h-[540px] lg:mt-6" src="Images/11.png" alt="">
       </div>
@@ -473,7 +473,7 @@
             <p class="pt-3 text-[#131318]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
         </div>
         <!-- start -->
-        <div class="lg:flex lg:gap-[114px] ">
+        <div class="lg:flex lg:gap-[142px] ">
             <div class="space-y-5">
                 <div class="bg-[#F8FDF0] p-10 lg:w-[370px] rounded-2xl">
                      <img class="mb-4" src="Images/Group 1171275317.png" alt="">
@@ -528,8 +528,8 @@
                           </label>
                     </div>
                  </div>
-                 <span class="md:hidden lg:flex">Message</span>
-                  <textarea placeholder="" class="textarea textarea-bordered textarea-lg h-[200px] w-[370px] md:w-[870px] lg:w-[610px] lg:h-[370px]" ></textarea>
+                 <div class=""><span class="md:hidden lg:flex mb-4">Message</span></div>
+                  <textarea placeholder="" class="textarea textarea-bordered textarea-lg h-[200px] w-[365px] md:w-[870px] lg:w-[610px] lg:h-[370px]" ></textarea>
                   <div class="bg-[#FF4240] lg:w-[610px] p-[15px] text-center rounded-2xl">
                     <span class= " text-white">Send Message</span>
                   </div>
