added footer section-1

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 <section class="pl-5 pr-5 pb-5 mt-5 lg:pt-10 lg:pb-10 lg:px-28" >
     <div class="text-center pb-3 lg:pb-14">
         <h1 class="font-extrabold text-4xl">Clients Question</h1>
-         <p class="pt-3 text-[#131318]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+         <p class="pt-3 text-[#131318]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam <br> turpis placerat  dolor. Purus urna in sit nullam proin. </p>
     </div>
   <div class="md:flex md:space-x-10 lg:flex items-center gap-5   ">
       <div class="mb-6">
@@ -528,8 +528,9 @@
                           </label>
                     </div>
                  </div>
+
                  <div class=""><span class="md:hidden lg:flex mb-4">Message</span></div>
-                  <textarea placeholder="" class="textarea textarea-bordered textarea-lg h-[200px] w-[365px] md:w-[870px] lg:w-[610px] lg:h-[370px]" ></textarea>
+                  <textarea placeholder="" class="textarea textarea-bordered h-[200px] w-[100%] md:w-[100%] lg:w-[100%] lg:h-[60%]" ></textarea>
                   <div class="bg-[#FF4240] lg:w-[610px] p-[15px] text-center rounded-2xl">
                     <span class= " text-white">Send Message</span>
                   </div>
@@ -537,9 +538,59 @@
         </div>
           </div>
     </section>
+    <!-- footer-1 -->
+    <section class="pl-5 pr-5 pb-5 mt-5 lg:pt-10 lg:pb-10 lg:px-28" >
+        <footer class="footer justify-around p-10 bg-[#F8F8F8] text-base-content">
+            <nav class="">
+              <header class="footer-title ml-9">Social Media</header> 
+              <div class="grid  gap-4">
+                <img src="Images/Social.svg" alt="">
+              </div>
+            </nav>
+          </footer>
+    </section>
     </main>
-    <footer>
-
-    </footer>
+    <!-- footer-2 -->
+    <footer class="footer p-10 bg-[#131318] text-base-content justify-around">
+        <aside>
+            <h1 class="font-extrabold text-3xl text-white">Get In Touch</h1>
+            <p class="text-[#ccc8c8] mt-2">Dit amet consectetur. Condimentum <br> adipiscing be
+                 aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+            <div class="mt-4">
+                <div class="flex gap-5">
+                    <img src="Images/1111.png" alt="">
+                    <p class="text-[#ccc8c8]">hockeys@support.com</p>
+                </div>
+                <div class="flex gap-5 mt-3">
+                    <img src="Images/111.png" alt="">
+                    <p class="text-[#ccc8c8]">(+62) 123-321-543</p>
+                </div>
+            </div>
+        </aside> 
+        <nav>
+          <h1 class="text-white text-[18px] font-bold">Company</h1>
+          <a class=" text-[#ccc8c8]">About us</a>
+          <a class=" text-[#ccc8c8]">Leadership</a>
+          <a class=" text-[#ccc8c8]">Careers</a>
+          <a class=" text-[#ccc8c8]">Article </a>
+          <a class=" text-[#ccc8c8]">Legal Notice</a>
+        </nav> 
+        <nav>
+          <header class="text-white text-[18px] font-bold">Support</header> 
+          <a class="text-[#ccc8c8]">Help Center</a>
+          <a class="text-[#ccc8c8]">FAQ </a>
+          <a class="text-[#ccc8c8]">Ticket Support</a>
+          <a class="text-[#ccc8c8]">Contact Us</a>
+        </nav> 
+        <nav>
+          <header class="text-white text-[18px] font-bold">Services</header> 
+          <a class="text-[#ccc8c8]">Academy</a>
+          <a class="text-[#ccc8c8]">Group Lesson </a>
+          <a class="text-[#ccc8c8]">Private Lesson</a>
+          <a class="text-[#ccc8c8]">Hockeys for kids</a>
+          <a class="text-[#ccc8c8]">Group Lesson </a>
+          <a class="text-[#ccc8c8]">Hockeys for Adult</a>
+        </nav>
+      </footer>
 </body>
 </html>
