added some text

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                   </div>
                 </div>
               </div>
-              <div class="w-[500px] bg-black p-6 absolute -mt-44 ml-[590px] rounded-2xl">
+              <div class="mt-4 lg:w-[500px] bg-black p-6 lg:absolute lg:-mt-44 lg:ml-[590px] rounded-2xl">
                 <h3 class="text-white items-center text-2xl font-extrabold">Meet all the heroes from the field</h3>
                 <p class="text-white items-center mt-2">pDit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p> 
               </div>
